# deepnote

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  IMPROVEMENT_SUGGESTIONS.md  README.md  annotated.html  annotated_dup.js  bezier_8hpp.html  bezier_8hpp.js  bezier_8hpp_source.html  classes.html  deepnotevoice_8hpp.html  deepnotevoice_8hpp.js  deepnotevoice_8hpp_source.html  dir_5436585c9af382541236744436162822.html  dir_5436585c9af382541236744436162822.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_b49eefbbc0b88fae91ade3f6e0837401.html  dir_b49eefbbc0b88fae91ade3f6e0837401.js  dir_b64294478ec8712cdd24c09049029d9d.html  dir_b64294478ec8712cdd24c09049029d9d.js  dir_b7878ad5ecbf2506f4125b9d34c97e45.html  dir_b7878ad5ecbf2506f4125b9d34c97e45.js  files.html  frequencytable_8hpp.html  frequencytable_8hpp_source.html  functions.html  functions_func.html  index.html  linear_8hpp.html  linear_8hpp_source.html  namedtype_8hpp.html  namedtype_8hpp_source.html  navtreedata.js  navtreeindex0.js  oscfrequency_8hpp.html  oscfrequency_8hpp_source.html  range_8hpp.html  (+9 more)
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml
cmake/: Coverage.cmake  add_external_projects.cmake  add_program_target.cmake  compiler_linker_options.cmake
docs/: performance_guide.md
docs/doxygen/: Doxyfile  mainpage.md
docs/examples/: basic_usage.cpp
scripts/: static_analysis.sh
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_a.js  all_b.js  all_e.js  all_f.js  classes_0.js  classes_1.js  files_0.js  files_1.js  files_2.js  files_4.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js
src/: CMakeLists.txt  main.cpp
src/ranges/: CMakeLists.txt  range.cpp  range.hpp  scaler.hpp
src/unitshapers/: CMakeLists.txt  bezier.hpp  linear.hpp  unitshaper.hpp
src/util/: namedtype.hpp
src/voice/: CMakeLists.txt  deepnotevoice.cpp  deepnotevoice.hpp  deepnotevoice_impl.hpp  frequencytable.hpp  multioscvoice.hpp  oscfrequency.hpp
test/: CMakeLists.txt  README.md  bezier.cpp  bezier_animation_tests.cpp  bezier_gtest.cpp  error_robustness_tests.cpp  freqtable.cpp  linear.cpp  linear_gtest.cpp  performance_tests.cpp  property_edge_tests.cpp  range.cpp  range_gtest.cpp  scaler.cpp  scaler_gtest.cpp  statemachine_lifecycle_tests.cpp  voice.cpp  voice_gtest.cpp
test/ranges/: CMakeLists.txt  range_test.cpp  scaler_test.cpp
test/unitshapers/: CMakeLists.txt  bezier_test.cpp  linear_test.cpp
